--- a/portail/client/package.json
+++ b/portail/client/package.json
@@ -9,7 +9,9 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,fr,de,it,rm}.json --clean --sort --format namespaced-json --marker _"
   },
   "private": true,
   "dependencies": {
