--- a/portail/client/package.json
+++ b/portail/client/package.json
@@ -28,12 +28,13 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/proj4": "^2.3.4",
     "axios": "^0.18.0",
+    "blob": "^0.1.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "concurrently": "^4.0.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
-    "file-saver": "^1.3.3",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "iobuffer": "^4.0.0",
     "jquery": "^3.2.1",
