--- a/portail/client/src/assets/maps/configtest.json
+++ b/portail/client/src/assets/maps/configtest.json
@@ -112,7 +112,175 @@
             }
             
         ]
+    },
+    {
+        "layername": "magosm:train_routes_line",
+        "nom_court": "Bahnlinien · Lignes ferroviaires · Linee ferroviarie · Train routes",
+        "md_url":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
+        "sld_path":"/styles/france_train_routes_line.sld",
+        "type":"WMS",
+        "download_gpkg":true,
+        "download_csv":true,
+        "download_json":true,
+        "download_kml":true,
+        "download_shp":true,
+        "feature_main_info":[
+            {"importance": "high","sub_tags":
+                [
+                    {"priority":1, "osm_key":"official_name"},
+                    {"priority":2, "osm_key":"name"},
+                    {"priority":3,"osm_key":"short_name"}
+                ]
+            },
+            {"importance":"medium","sub_tags":
+                [
+                    {"priority":1,"osm_key":"operator","label":"Opérateur"}
+                ]
+            },
+            {"importance":"low","sub_tags":
+                [
+                    {"priority":1,"osm_key":"ref","label":"Ligne"}
+                ]
+            },
+            {"importance":"no", "sub_tags":
+                [
+                    {"osm_key":"network","label":"Réseau"},
+                    {"osm_key":"website"},
+                    {"osm_key":"from","label":"Depuis"},
+                    {"osm_key":"to","label":"En direction de"},
+                    {"osm_key":"opening_hours","label":"Horaires d'ouverture"}
+                ]
+            }
+        ]
+    },
+    
+    {
+        "categorie": "telecom",
+        "id_categorie": 31,
+        "features": [
+            {
+                "layername": "magosm:telecom_exchange_point",
+                "nom_court": "Angeschlossenen Knoten · Noeuds de raccordement · Snodo di raccordo · Exchange point",
+                "md_url":"https://wiki.openstreetmap.org/wiki/Tag:telecom%3Dexchange",
+                "sld_path":"/styles/france_telecom_exchange_point.sld",
+                "type":"WMTS",
+                "download_gpkg":true,
+                "download_csv":true,
+                "download_json":true,
+                "download_kml":true,
+                "download_shp":true,
+                "feature_main_info":[
+                    {"importance": "high","sub_tags":
+                        [
+                            {"priority":1, "osm_key":"ref-FR-PTT","label":"Référence PTT"},
+                            {"priority":2, "osm_key":"ref-FR-Orange","label":"Référence Orange"},
+                            {"priority":3, "osm_key":"ref-FR-SFR","label":"Référence SFR"},
+                            {"priority":4, "osm_key":"ref","label":"Référence"}
+                        ]
+                    },
+                    {"importance":"medium","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"operator","label":"Opérateur"},
+                            {"priority":2,"osm_key":"owner","label":"Propriétaire"}
+                        ]
+                    },
+                    {"importance":"low","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"name","label":"Nom"},
+                            {"priority":2,"osm_key":"description","label":"Description"},
+                            {"priority":3,"osm_key":"street_cabinet","label":"Type de répartiteur"}
+                        ]
+                    },
+                    {"importance":"no", "sub_tags":
+                        [
+                            {"osm_key":"telecom-medium","label":"Type de câble"}
+                        ]
+                    }
+                ]
+            },
+            {
+                "layername": "magosm:telecom_fibre_connection_point",
+                "nom_court": "Verteilerpunkte Faser · Points de mutualisation Fibre · Punti di distribuzione Fibra · Connection point Fibre",
+                "md_url":"https://wiki.openstreetmap.org/wiki/Tag:telecom:medium%3Dfibre",
+                "sld_path":"/styles/france_telecom_fibre_connection_point.sld",
+                "type":"WMTS",
+                "download_gpkg":true,
+                "download_csv":true,
+                "download_json":true,
+                "download_kml":true,
+                "download_shp":true,
+                "feature_main_info":[
+                    {"importance": "high","sub_tags":
+                        [
+                            {"priority":1, "osm_key":"ref-FR-ARCEP","label":"Référence ARCEP"},
+                            {"priority":2,"osm_key":"ref-FR-Orange","label":"Référence Orange"},
+                            {"priority":3,"osm_key":"ref-FR-SFR","label":"Référence SFR"},
+                            {"priority":4, "osm_key":"ref","label":"Référence"}
+                        ]
+                    },
+                    {"importance":"medium","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"operator","label":"Opérateur"},
+                            {"priority":2,"osm_key":"owner","label":"Propriétaire"}
+                        ]
+                    },
+                    {"importance":"low","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"name","label":"Nom"},
+                            {"priority":2,"osm_key":"description","label":"Description"},
+                            {"priority":3,"osm_key":"street_cabinet","label":"Type de répartiteur"}
+                        ]
+                    },
+                    {"importance":"no", "sub_tags":
+                        [
+                            {"osm_key":"ref-FR-Orange-NRO","label":"Référence Orange NRO"}
+                        ]
+                    }
+                ]
+            },
+			{
+                "layername": "magosm:telecom_copper_connection_point",
+                "nom_court": "Unter den Verteilern Kupfer · Sous-répartiteurs cuivre · Armadio di distribuzione rame · Connection point copper",
+                "md_url":"https://wiki.openstreetmap.org/wiki/Tag:telecom:medium%3Dcopper",
+                "sld_path":"/styles/france_telecom_copper_connection_point.sld",
+                "type":"WMTS",
+                "download_gpkg":true,
+                "download_csv":true,
+                "download_json":true,
+                "download_kml":true,
+                "download_shp":true,
+                "feature_main_info":[
+                    {"importance": "high","sub_tags":
+                        [
+                            {"priority":1, "osm_key":"ref-FR-PTT","label":"Référence PTT"},
+                            {"priority":2, "osm_key":"ref","label":"Référence"},
+                            {"priority":3,"osm_key":"ref-FR-Orange","label":"Référence Orange"}
+                        ]
+                    },
+                    {"importance":"medium","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"operator","label":"Opérateur"},
+                            {"priority":2,"osm_key":"owner","label":"Propriétaire"}
+                        ]
+                    },
+                    {"importance":"low","sub_tags":
+                        [
+                            {"priority":1,"osm_key":"name","label":"Nom"},
+                            {"priority":2,"osm_key":"description","label":"Description"},
+                            {"priority":3,"osm_key":"street_cabinet","label":"Type de répartiteur"}
+                        ]
+                    },
+                    {"importance":"no", "sub_tags":
+                        [
+                            {"osm_key":"ref-FR-PTT-NRA","label":"Référence PTT NRA"},
+                            {"osm_key":"telecom-medium","label":"Type de câble"}
+                        ]
+                    }
+                ]
+            }
+        ]
     }
+    
 
 ]
 
